load("@rules_rust//rust:defs.bzl", "rust_test")

# Individual test targets for each integration test file
rust_test(
    name = "container_state_test",
    srcs = ["container_state_test.rs"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "@crates//:chrono",
    ],
)

rust_test(
    name = "downward_api_env_test",
    srcs = ["downward_api_env_test.rs"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-ports/src:lib",
        "//crates/kubelet-adapters/src:lib",
        "//crates/kubelet-app/src:lib",
        "@crates//:tokio",
        "@crates//:serde_json",
        "@crates//:rustls",
    ],
)

rust_test(
    name = "pod_lifecycle_test",
    srcs = ["pod_lifecycle_test.rs"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-ports/src:lib",
        "//crates/kubelet-adapters/src:lib",
        "//crates/kubelet-app/src:lib",
        "//crates/kubelet-cri/src:lib",
        "@crates//:chrono",
        "@crates//:tokio",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:rustls",
        "@crates//:uuid",
        "@crates//:tracing",
        "@crates//:serde",
    ],
)

rust_test(
    name = "resource_orchestration_test",
    srcs = ["resource_orchestration_test.rs"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-ports/src:lib",
        "//crates/kubelet-adapters/src:lib",
        "//crates/kubelet-app/src:lib",
        "@crates//:tokio",
        "@crates//:uuid",
        "@crates//:serde_json",
        "@crates//:tracing",
        "@crates//:tempfile",
        "@crates//:futures",
        "@crates//:tonic",
        "@crates//:tower",
        "@crates//:hyper-util",
        "@crates//:chrono",
    ],
)

rust_test(
    name = "runtime_network_storage_test",
    srcs = ["runtime_network_storage_test.rs"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-ports/src:lib",
        "//crates/kubelet-adapters/src:lib",
        "//crates/kubelet-app/src:lib",
        "//crates/kubelet-cri/src:lib",
        "@crates//:tokio",
        "@crates//:serde_json",
        "@crates//:tempfile",
        "@crates//:chrono",
        "@crates//:uuid",
        "@crates//:tracing",
        "@crates//:serde",
    ],
)

rust_test(
    name = "security_context_test",
    srcs = ["security_context_test.rs"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-ports/src:lib",
        "//crates/kubelet-adapters/src:lib",
        "@crates//:tokio",
        "@crates//:tracing",
    ],
)
