load("@rules_rust//rust:defs.bzl", "rust_library")

# gazelle:exclude exec_handler
# gazelle:exclude pod_worker
# gazelle:exclude runtime_manager
# gazelle:exclude streaming

rust_library(
    name = "lib",
    crate_name = "kubelet_app",
    srcs = glob(["**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-ports/src:lib",
        "//crates/kubelet-adapters/src:lib",
        "//crates/kubelet-cri/src:lib",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:anyhow",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:axum",
        "@crates//:tower",
        "@crates//:tower-http",
        "@crates//:chrono",
        "@crates//:prometheus",
        "@crates//:clap",
        "@crates//:dashmap",
        "@crates//:uuid",
        "@crates//:hostname",
        "@crates//:num_cpus",
        "@crates//:tokio-rustls",
        "@crates//:rustls-pemfile",
        "@crates//:hyper",
        "@crates//:hyper-util",
        "@crates//:once_cell",
        "@crates//:futures",
        "@crates//:kube",
        "@crates//:k8s-openapi",
        "@crates//:flate2",
        "@crates//:base64",
        "@crates//:ring",
        "@crates//:reqwest",
        "@crates//:rcgen",
        "@crates//:x509-parser",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

