load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

# gazelle:ignore
# gazelle:exclude exec_handler
# gazelle:exclude pod_worker
# gazelle:exclude runtime_manager
# gazelle:exclude streaming

rust_library(
    name = "lib",
    srcs = glob(["**/*.rs"]),
    crate_name = "kubelet_app",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//crates/kubelet-adapters/src:lib",
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-cri/src:lib",
        "//crates/kubelet-ports/src:lib",
        "@crates//:anyhow",
        "@crates//:axum",
        "@crates//:base64",
        "@crates//:chrono",
        "@crates//:clap",
        "@crates//:dashmap",
        "@crates//:flate2",
        "@crates//:futures",
        "@crates//:hostname",
        "@crates//:hyper",
        "@crates//:hyper-util",
        "@crates//:k8s-openapi",
        "@crates//:kube",
        "@crates//:num_cpus",
        "@crates//:once_cell",
        "@crates//:prometheus",
        "@crates//:rcgen",
        "@crates//:reqwest",
        "@crates//:ring",
        "@crates//:rustls-pemfile",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:serde_yaml",
        "@crates//:tokio",
        "@crates//:tokio-rustls",
        "@crates//:tokio-stream",
        "@crates//:tower",
        "@crates//:tower-http",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:uuid",
        "@crates//:x509-parser",
    ],
)

rust_test(
    name = "app_test",
    crate = ":lib",
    edition = "2024",
    deps = [
        "@crates//:reqwest",
        "@crates//:rstest",
        "@crates//:tempfile",
        "@crates//:tokio",
    ],
)
