load("@rules_rust//rust:defs.bzl", "rust_library")

# gazelle:ignore
# gazelle:exclude client
# gazelle:exclude mock_server
# gazelle:exclude types

rust_library(
    name = "lib",
    srcs = glob(["**/*.rs"]),
    crate_name = "kubelet_cri",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-ports/src:lib",
        "@crates//:anyhow",
        "@crates//:base64",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:hyper",
        "@crates//:hyper-util",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tonic",
        "@crates//:tower",
        "@crates//:tracing",
        "@crates//:url",
        "@crates//:uuid",
    ],
)

rust_library(
    name = "src",
    srcs = glob(["**/*.rs"]),
    edition = "2024",
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-ports/src:lib",
        "@crates//:anyhow",
        "@crates//:base64",
        "@crates//:bytes",
        "@crates//:chrono",
        "@crates//:hyper",
        "@crates//:hyper-util",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tonic",
        "@crates//:tower",
        "@crates//:tracing",
        "@crates//:url",
        "@crates//:uuid",
    ],
)
