load("@rules_rust//rust:defs.bzl", "rust_library")

# gazelle:exclude driven
# gazelle:exclude driving

rust_library(
    name = "lib",
    crate_name = "kubelet_ports",
    srcs = glob(["**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "@crates//:anyhow",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:chrono",
        "@crates//:tracing",
    ],
    proc_macro_deps = [
        "@crates//:async-trait",
    ],
)

